# haussmann

./: .gitignore  Cargo.toml  README.md
controllers/: mod.rs  tap.rs
dev/: Cargo.toml
dev/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
src/: align.rs  border.rs  direction.rs  drawer.rs  font.rs  integrate.rs  integrator.rs  lib.rs  overflow.rs  radius.rs  side.rs  theme.rs  zone.rs
src/graphics/: aligner.rs  builder.rs  colours.rs  draw.rs  drawer.rs  mod.rs  sizer.rs
src/graphics/shapes/: builder.rs  mod.rs  rectangle.rs
src/themes/: mod.rs  text.rs  view.rs  widget.rs
tests/: downcast.rs  dyn.rs  integrate.rs  integration.rs  macros.rs  sdl2.rs  shapes.rs  tests.rs  to_svg.rs  tui.rs  unusual.rs  web.rs
tests/rust/: closures.rs
widgets/: button.rs  container.rs  image.rs  label.rs  layout.rs  mod.rs  surface.rs  toolbar.rs  view.rs
widgets/buttons/: image.rs  mod.rs  text.rs
