[package]
name = "haussmann"
description = "Integrate highly customisable widgets and themes for any Rust application or GUI library"
authors = ["Antonin Hérault <antonherault@gmail.com>"]
repository = "https://github.com/antoninhrlt/haussmann"
readme = "README.md"
keywords = ["widgets", "gui", "ux", "toolkit", "theme"]
license = "MIT"
version = "0.0.2"
edition = "2021"

[dependencies]

[dev-dependencies]
svg = "0.13.0"
sdl2 = "0.35.2"
