[package]
name = "haussmann"
description = "Integrate highly customisable widgets and themes for any Rust application or GUI library"
authors = ["Antonin Hérault <antonherault@gmail.com>"]
repository = "https://github.com/antoninhrlt/haussmann"
readme = "README.md"
keywords = ["widgets", "gui", "ux", "application", "theme"]
license = "MIT"
version = "0.0.3"
edition = "2021"

[dependencies]
haussmann-dev = { path = "./dev" }

[dev-dependencies]
sdl2 = "0.35.2"
rand = "0.8.5"
crossterm = "0.26.1"
tui = "0.19.0"
